[package]
name = "canvasette"
description = "A minimal library for wgpu that draws sprites and text"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[features]
default = ["text"]
text = ["dep:cosmic-text"]

[dependencies]
wgpu = "22.1.0"
spright = "0.7.0"
cosmic-text = { version = "0.12.1", optional = true }
etagere = "0.2.13"
rgb = "0.8.50"
thiserror = "1"
sys-locale = "0.3.1"

[dev-dependencies]
winit = "0.30"
pollster = "0.3.0"
image = { version = "0.25.2", default-features = false, features = ["png"] }
