[package]
name = "canvasette"
description = "A minimal library for wgpu that draws sprites and text"
repository = "https://github.com/teenygame/canvasette"
version = "0.20.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[features]
default = ["text"]
text = ["dep:cosmic-text"]

[dependencies]
wgpu = "23.0.1"
spright = "0.16.2"
cosmic-text = { version = "0.12.1", optional = true }
etagere = "0.2.13"
rgb = "0.8.50"
thiserror = "1"
sys-locale = "0.3.1"
glam = "0.29.0"
imgref = "1.11.0"
bytemuck = "1.19.0"
indexmap = "2.6.0"

[dev-dependencies]
winit = "0.30"
pollster = "0.3.0"
image = { version = "0.25.2", default-features = false, features = ["png"] }
